--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
       run: brew livecheck
 
     - name: Run brew livecheck on added/modified Livecheckables
-      run: git diff --name-only --diff-filter=AM master -- Livecheckables/ | sed "s/Livecheckables\/\(.*\).rb/\1/" | xargs brew livecheck
+      run: git diff --name-only --diff-filter=AM origin/master -- Livecheckables/ | sed "s|Livecheckables/\(.+\)\.rb|\1|" | xargs brew livecheck
