--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,3 +24,6 @@ jobs:
 
     - name: Run brew livecheck
       run: brew livecheck
+
+    - name: Run brew livecheck on added/modified Livecheckables
+      run: git diff --name-only --diff-filter=AM origin/master -- Livecheckables/ | sed "s|Livecheckables/\(.+\)\.rb|\1|" | xargs brew livecheck
