test github workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,5 +25,9 @@ jobs:
     - name: Run brew livecheck
       run: brew livecheck
 
+    - name: Fetch origin/master
+      uses: actions/checkout@v2
+      run: git fetch --depth=1 origin master
+
     - name: Run brew livecheck on added/modified Livecheckables
-      run: git diff --name-only --diff-filter=AM origin/master -- Livecheckables/ | sed "s|Livecheckables/\(.+\)\.rb|\1|" | xargs brew livecheck
+      run: git diff --name-only --diff-filter=AM origin/master -- Livecheckables/ | sed "s|Livecheckables/\(.*\)\.rb|\1|" | xargs brew livecheck
