--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,30 +1,26 @@
 name: GitHub Actions CI
-
 on:
   push:
     branches: master
   pull_request: []
-
 jobs:
   tests:
     runs-on: macOS-latest
-    env:
-      HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
-    - name: Update Homebrew
+    - name: Set up Git repository
+      uses: actions/checkout@master
+
+    - name: Set up Homebrew
       run: |
+        export HOMEBREW_DEVELOPER="1"
+        export HOMEBREW_NO_AUTO_UPDATE=1
+        export CONTINUOUS_INTEGRATION=1
         brew update-reset
-
-    - name: Checkout tap
-      uses: actions/checkout@v2
-
-    - name: Setup tap
-      run: |
-        mkdir -p $(dirname $(brew --repository $GITHUB_REPOSITORY))
-        ln -s $PWD $(brew --repository $GITHUB_REPOSITORY)
+        ln -s "$PWD" "/usr/local/Homebrew/Library/Taps/homebrew/homebrew-command-not-found"
+        touch "$HOME/.brew_livecheck_watchlist"
 
     - name: Run brew style
-      run: brew style $GITHUB_REPOSITORY
+      run: brew style homebrew/livecheck
 
     - name: Run brew livecheck
       run: brew livecheck
